Checkpoint: 完整的多语言支持实现： - 菜单文本已翻译为 i18n（Home、Explore、History、Recommended Videos） - 管理后台 AdminVideos 页面已完全翻译 - 搜索框占位符已翻译 - 添加了中文、英文、韩语的完整翻译文件 - 语言切换器正常工作 - 所有 16 个单元测试通过

--- a/client/src/locales/zh.json
+++ b/client/src/locales/zh.json
@@ -68,9 +68,23 @@
     "confirmDelete": "确定要删除吗？",
     "deleteSuccess": "删除成功",
     "saveSucess": "保存成功",
+    "saveFailed": "保存失败",
     "editPassword": "编辑密码",
     "newPassword": "新密码",
-    "confirmPassword": "确认密码"
+    "confirmPassword": "确认密码",
+    "uploadVideo": "上传视频",
+    "videoSource": "视频源 (二选一)",
+    "uploadMethod": "方式 1: 上传视频文件",
+    "linkMethod": "方式 2: 输入视频链接",
+    "selected": "已选择",
+    "linkEntered": "已输入链接",
+    "thumbnail": "缩略图链接",
+    "thumbnailUrl": "输入缩略图链接",
+    "selectCategory": "选择分类",
+    "selectVideoSource": "请上传视频文件或输入视频链接",
+    "uploadFailed": "上传失败",
+    "uploadFileFailed": "上传视频文件失败，请检查文件大小或格式",
+    "deleteFailed": "删除失败"
   },
   "language": {
     "chinese": "中文",
