--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -42,7 +42,12 @@
     "videoUrl": "Video URL",
     "videoFile": "Video File",
     "or": "or",
-    "selectFile": "Select File"
+    "selectFile": "Select File",
+    "uploadedBy": "Uploaded by",
+    "uploadDate": "Upload Date",
+    "status": "Status",
+    "published": "Published",
+    "draft": "Draft"
   },
   "admin": {
     "dashboard": "Admin Dashboard",
@@ -70,7 +75,22 @@
     "saveSucess": "Saved successfully",
     "editPassword": "Edit Password",
     "newPassword": "New Password",
-    "confirmPassword": "Confirm Password"
+    "confirmPassword": "Confirm Password",
+    "edit": "Edit",
+    "delete": "Delete",
+    "add": "Add",
+    "close": "Close",
+    "selectCategory": "Select Category",
+    "selectTags": "Select Tags",
+    "videosCount": "Videos",
+    "usersCount": "Users",
+    "categoriesCount": "Categories",
+    "tagsCount": "Tags",
+    "totalViews": "Total Views",
+    "statistics": "Statistics",
+    "name": "Name",
+    "createdAt": "Created At",
+    "updatedAt": "Updated At"
   },
   "language": {
     "chinese": "中文",
