--- a/client/src/locales/ko.json
+++ b/client/src/locales/ko.json
@@ -42,7 +42,12 @@
     "videoUrl": "비디오 URL",
     "videoFile": "비디오 파일",
     "or": "또는",
-    "selectFile": "파일 선택"
+    "selectFile": "파일 선택",
+    "uploadedBy": "업로드자",
+    "uploadDate": "업로드 날짜",
+    "status": "상태",
+    "published": "게시됨",
+    "draft": "초안"
   },
   "admin": {
     "dashboard": "관리자 대시보드",
@@ -70,7 +75,22 @@
     "saveSucess": "저장되었습니다",
     "editPassword": "비밀번호 편집",
     "newPassword": "새 비밀번호",
-    "confirmPassword": "비밀번호 확인"
+    "confirmPassword": "비밀번호 확인",
+    "edit": "편집",
+    "delete": "삭제",
+    "add": "추가",
+    "close": "닫기",
+    "selectCategory": "카테고리 선택",
+    "selectTags": "태그 선택",
+    "videosCount": "동영상",
+    "usersCount": "사용자",
+    "categoriesCount": "카테고리",
+    "tagsCount": "태그",
+    "totalViews": "총 조회수",
+    "statistics": "통계",
+    "name": "이름",
+    "createdAt": "생성 시간",
+    "updatedAt": "업데이트 시간"
   },
   "language": {
     "chinese": "中文",
