--- a/client/src/locales/zh.json
+++ b/client/src/locales/zh.json
@@ -59,6 +59,9 @@
     "newTag": "新建标签",
     "newUser": "新建用户",
     "newVideo": "新建视频",
+    "editCategory": "编辑分类",
+    "editTag": "编辑标签",
+    "editUser": "编辑用户",
     "categoryName": "分类名称",
     "tagName": "标签名称",
     "username": "用户名",
@@ -71,8 +74,39 @@
     "color": "颜色",
     "actions": "操作",
     "confirmDelete": "确定要删除吗？",
+    "confirmDeleteCategory": "确定要删除这个分类吗？",
+    "confirmDeleteTag": "确定要删除这个标签吗？",
+    "confirmDeleteUser": "确定要删除这个用户吗？",
     "deleteSuccess": "删除成功",
     "saveSucess": "保存成功",
+    "saveFailed": "保存失败",
+    "uploadFailed": "上传失败",
+    "uploadFileFailed": "上传视频文件失败",
+    "selected": "已选择",
+    "linkEntered": "已输入链接",
+    "selectVideoSource": "请选择视频源（文件或链接）",
+    "videoSource": "视频源",
+    "uploadMethod": "上传文件",
+    "linkMethod": "输入链接",
+    "thumbnail": "缩略图",
+    "thumbnailUrl": "缩略图链接",
+    "categoryList": "分类列表",
+    "tagList": "标签列表",
+    "userList": "用户列表",
+    "enterCategoryName": "输入分类名称",
+    "enterTagName": "输入标签名称",
+    "enterDescription": "输入描述",
+    "enterUsername": "输入用户名",
+    "enterEmail": "输入邮箱",
+    "enterDisplayName": "输入显示名称",
+    "enterPassword": "输入密码（至少 6 位）",
+    "enterNewPassword": "输入新密码（至少 6 位）",
+    "confirmNewPassword": "再次输入新密码",
+    "displayName": "显示名称",
+    "regularUser": "普通用户",
+    "administrator": "管理员",
+    "changePassword": "修改密码",
+    "change": "修改",
     "editPassword": "修改密码",
     "newPassword": "新密码",
     "confirmPassword": "确认密码",
@@ -90,7 +124,20 @@
     "statistics": "统计信息",
     "name": "名称",
     "createdAt": "创建时间",
-    "updatedAt": "更新时间"
+    "updatedAt": "更新时间",
+    "fetchUsersFailed": "获取用户列表失败",
+    "usernameEmailRequired": "用户名和邮箱不能为空",
+    "userUpdateSuccess": "用户更新成功",
+    "passwordRequired": "新建用户必须设置密码",
+    "userCreateSuccess": "用户创建成功",
+    "saveUserFailed": "保存用户失败，请检查输入",
+    "userDeleteSuccess": "用户删除成功",
+    "deleteUserFailed": "删除用户失败",
+    "passwordCannotBeEmpty": "新密码不能为空",
+    "passwordMismatch": "两次输入的密码不一致",
+    "passwordTooShort": "密码长度至少为 6 位",
+    "passwordChangeSuccess": "密码修改成功，请重新登录",
+    "changePasswordFailed": "修改密码失败"
   },
   "language": {
     "chinese": "中文",
