--- a/client/src/locales/ko.json
+++ b/client/src/locales/ko.json
@@ -59,6 +59,9 @@
     "newTag": "새 태그",
     "newUser": "새 사용자",
     "newVideo": "새 비디오",
+    "editCategory": "카테고리 편집",
+    "editTag": "태그 편집",
+    "editUser": "사용자 편집",
     "categoryName": "카테고리 이름",
     "tagName": "태그 이름",
     "username": "사용자명",
@@ -71,8 +74,39 @@
     "color": "색상",
     "actions": "작업",
     "confirmDelete": "정말 삭제하시겠습니까?",
+    "confirmDeleteCategory": "이 카테고리를 정말 삭제하시겠습니까?",
+    "confirmDeleteTag": "이 태그를 정말 삭제하시겠습니까?",
+    "confirmDeleteUser": "이 사용자를 정말 삭제하시겠습니까?",
     "deleteSuccess": "삭제되었습니다",
     "saveSucess": "저장되었습니다",
+    "saveFailed": "저장 실패",
+    "uploadFailed": "업로드 실패",
+    "uploadFileFailed": "비디오 파일 업로드 실패",
+    "selected": "선택됨",
+    "linkEntered": "링크 입력됨",
+    "selectVideoSource": "비디오 소스를 선택하세요 (파일 또는 링크)",
+    "videoSource": "비디오 소스",
+    "uploadMethod": "파일 업로드",
+    "linkMethod": "링크 입력",
+    "thumbnail": "썸네일",
+    "thumbnailUrl": "썸네일 URL",
+    "categoryList": "카테고리 목록",
+    "tagList": "태그 목록",
+    "userList": "사용자 목록",
+    "enterCategoryName": "카테고리 이름 입력",
+    "enterTagName": "태그 이름 입력",
+    "enterDescription": "설명 입력",
+    "enterUsername": "사용자명 입력",
+    "enterEmail": "이메일 입력",
+    "enterDisplayName": "표시 이름 입력",
+    "enterPassword": "비밀번호 입력 (최소 6자)",
+    "enterNewPassword": "새 비밀번호 입력 (최소 6자)",
+    "confirmNewPassword": "새 비밀번호 확인",
+    "displayName": "표시 이름",
+    "regularUser": "일반 사용자",
+    "administrator": "관리자",
+    "changePassword": "비밀번호 변경",
+    "change": "변경",
     "editPassword": "비밀번호 편집",
     "newPassword": "새 비밀번호",
     "confirmPassword": "비밀번호 확인",
@@ -90,7 +124,20 @@
     "statistics": "통계",
     "name": "이름",
     "createdAt": "생성 시간",
-    "updatedAt": "업데이트 시간"
+    "updatedAt": "업데이트 시간",
+    "fetchUsersFailed": "사용자 목록 가져오기 실패",
+    "usernameEmailRequired": "사용자명과 이메일은 필수입니다",
+    "userUpdateSuccess": "사용자가 업데이트되었습니다",
+    "passwordRequired": "새 사용자는 비밀번호를 설정해야 합니다",
+    "userCreateSuccess": "사용자가 생성되었습니다",
+    "saveUserFailed": "사용자 저장 실패, 입력을 확인하세요",
+    "userDeleteSuccess": "사용자가 삭제되었습니다",
+    "deleteUserFailed": "사용자 삭제 실패",
+    "passwordCannotBeEmpty": "비밀번호는 비워둘 수 없습니다",
+    "passwordMismatch": "비밀번호가 일치하지 않습니다",
+    "passwordTooShort": "비밀번호는 최소 6자 이상이어야 합니다",
+    "passwordChangeSuccess": "비밀번호가 변경되었습니다. 다시 로그인하세요",
+    "changePasswordFailed": "비밀번호 변경 실패"
   },
   "language": {
     "chinese": "中文",
