--- a/client/src/locales/ko.json
+++ b/client/src/locales/ko.json
@@ -137,7 +137,24 @@
     "passwordMismatch": "비밀번호가 일치하지 않습니다",
     "passwordTooShort": "비밀번호는 최소 6자 이상이어야 합니다",
     "passwordChangeSuccess": "비밀번호가 변경되었습니다. 다시 로그인하세요",
-    "changePasswordFailed": "비밀번호 변경 실패"
+    "changePasswordFailed": "비밀번호 변경 실패",
+    "videoManagement": "비디오 관리",
+    "videoManagementDesc": "비디오 콘테늤를 관리하고, 새 비디오를 업로드하고, 비디오 정보를 수정하세요",
+    "enterVideoManagement": "비디오 관리로 이동",
+    "categoryManagement": "카테고리 관리",
+    "categoryManagementDesc": "비디오 카테고리를 만들고 관리하며, 콘테늤 구조를 정리하세요",
+    "enterCategoryManagement": "카테고리 관리로 이동",
+    "tagManagement": "태그 관리",
+    "tagManagementDesc": "비디오 태그를 만들고 관리하며, 콘테늤를 태그로 정리하세요",
+    "enterTagManagement": "태그 관리로 이동",
+    "userManagement": "사용자 관리",
+    "userManagementDesc": "플래폰 사용자, 권한 및 계정 정보를 관리하세요",
+    "enterUserManagement": "사용자 관리로 이동",
+    "platformStatistics": "플래폰 통계",
+    "totalVideos": "총 비디오 수",
+    "totalUsers": "총 사용자 수",
+    "totalCategories": "총 카테고리 수",
+    "totalTags": "총 태그 수"
   },
   "language": {
     "chinese": "中文",
