--- a/client/src/locales/zh.json
+++ b/client/src/locales/zh.json
@@ -137,7 +137,24 @@
     "passwordMismatch": "两次输入的密码不一致",
     "passwordTooShort": "密码长度至少为 6 位",
     "passwordChangeSuccess": "密码修改成功，请重新登录",
-    "changePasswordFailed": "修改密码失败"
+    "changePasswordFailed": "修改密码失败",
+    "videoManagement": "视频管理",
+    "videoManagementDesc": "管理视频内容、上传新视频、编辑视频信息",
+    "enterVideoManagement": "进入视频管理",
+    "categoryManagement": "分类管理",
+    "categoryManagementDesc": "创建和管理视频分类，组织内容结构",
+    "enterCategoryManagement": "进入分类管理",
+    "tagManagement": "标签管理",
+    "tagManagementDesc": "创建和管理视频标签，方便内容分类",
+    "enterTagManagement": "进入标签管理",
+    "userManagement": "用户管理",
+    "userManagementDesc": "管理平台用户、权限和账户信息",
+    "enterUserManagement": "进入用户管理",
+    "platformStatistics": "平台统计",
+    "totalVideos": "总视频数",
+    "totalUsers": "总用户数",
+    "totalCategories": "总分类数",
+    "totalTags": "总标签数"
   },
   "language": {
     "chinese": "中文",
